--- a/src/app/features/admin/manage-color/manage-color.component.html
+++ b/src/app/features/admin/manage-color/manage-color.component.html
@@ -9,75 +9,70 @@
                 <p-toast></p-toast>
                 <p-confirmDialog></p-confirmDialog>
                 <div class="card-body">
-                    <div class="card-body">
-                        <p-table #dt editMode="row" [value]="colors" dataKey="Col_ID" [paginator]="true" [rows]="10"
-                            [globalFilterFields]="['Col_ID', 'Col_Name', 'Col_Status']" [responsiveLayout]="'scroll'">
-                            <ng-template pTemplate="caption">
-                                <div class="d-flex">
-                                    <span class="p-input-icon-left ml-auto">
-                                        <i class="pi pi-search"></i>
-                                        <input pInputText type="text" style="width: 200px;"
-                                            (input)="handleInput($event, dt)" placeholder="Tìm kiếm" />
-                                    </span>
-                                </div>
-                            </ng-template>
-                            <ng-template pTemplate="header">
-                                <tr>
-                                    <th style="width:15%">ID</th>
-                                    <th style="width:50%">Tên Màu</th>
-                                    <th style="width:20%">Trạng Thái</th>
-                                    <th style="width:15%"></th>
-                                </tr>
-                            </ng-template>
-                            <ng-template pTemplate="body" let-color let-editing="editing" let-ri="rowIndex">
-                                <tr [pEditableRow]="color">
-                                    <td>{{ color.Col_ID }}</td>
-                                    <td>
-                                        <p-cellEditor>
-                                            <ng-template pTemplate="input">
-                                                <input pInputText type="text" [(ngModel)]="color.Col_Name" />
-                                            </ng-template>
-                                            <ng-template pTemplate="output">
-                                                {{ color.Col_Name }}
-                                            </ng-template>
-                                        </p-cellEditor>
-                                    </td>
-                                    <td>
-                                        <p-cellEditor>
-                                            <ng-template pTemplate="input">
-                                                <p-dropdown [options]="statuses" appendTo="body"
-                                                    [(ngModel)]="color.Col_Status" />
-                                            </ng-template>
-                                            <ng-template pTemplate="output">
-                                                <p-tag [value]="color.Col_Status ? 'Hoạt động' : 'Ngừng bán' "
-                                                    [severity]="getSeverity(color.Col_Status)" />
-                                            </ng-template>
-                                        </p-cellEditor>
-                                    </td>
-                                    <td>
-                                        <div class="flex align-items-center justify-content-center gap-2">
-                                            <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow
-                                                icon="pi pi-pencil" (click)="onRowEditInit(color)"
-                                                class="p-button-rounded p-button-text">
-                                            </button>
-                                            <button *ngIf="!editing" pButton pRipple type="button" icon="pi pi-trash"
-                                                (click)="deleteColor(color)"
-                                                class="p-button-rounded p-button-text p-button-danger">
-                                            </button>
-                                            <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow
-                                                icon="pi pi-check" (click)="onRowEditSave(color, ri)"
-                                                class="p-button-rounded p-button-text p-button-success mr-2">
-                                            </button>
-                                            <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow
-                                                icon="pi pi-times" (click)="onRowEditCancel(color, ri)"
-                                                class="p-button-rounded p-button-text p-button-danger">
-                                            </button>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </ng-template>
-                        </p-table>
-                    </div>
+                    <p-table #dt editMode="row" [value]="colors" dataKey="id" [paginator]="true" [rows]="10"
+                        [globalFilterFields]="['id', 'name', 'status']" [responsiveLayout]="'scroll'">
+                        <ng-template pTemplate="caption">
+                            <div class="d-flex">
+                                <span class="p-input-icon-left ml-auto">
+                                    <i class="pi pi-search"></i>
+                                    <input pInputText type="text" style="width: 200px;" (input)="handleInput($event, dt)" placeholder="Tìm kiếm" />
+                                </span>
+                            </div>
+                        </ng-template>
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th>ID</th>
+                                <th>Tên Màu</th>
+                                <th>Trạng Thái</th>
+                                <th></th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-color let-editing="editing" let-ri="rowIndex">
+                            <tr [pEditableRow]="color">
+                                <td>{{ color.id }}</td>
+                                <td>
+                                    <p-cellEditor>
+                                        <ng-template pTemplate="input">
+                                            <input pInputText type="text" [(ngModel)]="color.name" />
+                                        </ng-template>
+                                        <ng-template pTemplate="output">
+                                            {{ color.name }}
+                                        </ng-template>
+                                    </p-cellEditor>
+                                </td>
+                                <td>
+                                    <p-cellEditor>
+                                        <ng-template pTemplate="input">
+                                            <p-dropdown [options]="statuses" appendTo="body" [(ngModel)]="color.status" />
+                                        </ng-template>
+                                        <ng-template pTemplate="output">
+                                            <p-tag [value]="color.status ? 'Hoạt động' : 'Ngừng bán' " [severity]="getSeverity(color.status)" />
+                                        </ng-template>
+                                    </p-cellEditor>
+                                </td>
+                                <td>
+                                    <div class="flex align-items-center justify-content-center gap-2">
+                                        <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow
+                                            icon="pi pi-pencil" (click)="onRowEditInit(color)"
+                                            class="p-button-rounded p-button-text">
+                                        </button>
+                                        <button *ngIf="!editing" pButton pRipple type="button"
+                                            icon="pi pi-trash" (click)="deleteColor(color)"
+                                            class="p-button-rounded p-button-text p-button-danger">
+                                        </button>
+                                        <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow
+                                            icon="pi pi-check" (click)="onRowEditSave(color, ri)"
+                                            class="p-button-rounded p-button-text p-button-success mr-2">
+                                        </button>
+                                        <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow
+                                            icon="pi pi-times" (click)="onRowEditCancel(color, ri)"
+                                            class="p-button-rounded p-button-text p-button-danger">
+                                        </button>
+                                    </div>
+                                </td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
                 </div>
             </div>
         </div>
@@ -85,21 +80,20 @@
     <app-admin-footer></app-admin-footer>
 </div>
 
-<p-dialog header="Thêm màu sắc" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }"
-    styleClass="p-fluid">
-    <form>
+<p-dialog header="Thêm màu sắc" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }" styleClass="p-fluid">
+    <form (ngSubmit)="createNewColor()">
         <div class="mb-4">
             <label for="name" class="form-label">Tên màu sắc</label>
-            <input type="text" class="form-control" id="name" placeholder="Nhập tên" name="name">
+            <input type="text" class="form-control" id="name" placeholder="Nhập tên" name="name" [(ngModel)]="createColor.name">
         </div>
         <div class="mb-4">
             <label class="form-check-label me-2" for="active">Trạng thái:</label>
-            <input class="form-check-input" type="radio" name="active" id="visible"> Hoạt động
-            <input class="form-check-input ms-2" type="radio" name="active" id="disable"> Ngừng bán
+            <input class="form-check-input" type="radio" name="active" id="visible" [value]="true" [(ngModel)]="createColor.status"> Hoạt động
+            <input class="form-check-input ms-2" type="radio" name="active" id="disable" [value]="false" [(ngModel)]="createColor.status"> Ngừng bán
         </div>
         <div class="d-flex justify-content-end gap-2 mt-4">
             <p-button label="Hủy" severity="secondary" (onClick)="visible = false" />
-            <p-button label="Lưu" (onClick)="visible = false" />
+            <p-button label="Lưu" (onClick)="visible = false" type="submit" />
         </div>
     </form>
 </p-dialog>
