--- a/src/app/features/admin/manage-size/manage-size.component.html
+++ b/src/app/features/admin/manage-size/manage-size.component.html
@@ -9,87 +9,81 @@
                 <p-toast></p-toast>
                 <p-confirmDialog></p-confirmDialog>
                 <div class="card-body">
-                    <div class="card-body">
-                        <p-table #dt editMode="row" [value]="sizes" dataKey="Siz_ID" [paginator]="true" [rows]="10"
-                            [globalFilterFields]="['Siz_ID', 'Siz_Name', 'Siz_Desc', 'Siz_Status']"
-                            [responsiveLayout]="'scroll'">
-                            <ng-template pTemplate="caption">
-                                <div class="d-flex">
-                                    <span class="p-input-icon-left ml-auto">
-                                        <i class="pi pi-search"></i>
-                                        <input pInputText type="text" style="width: 200px;"
-                                            (input)="handleInput($event, dt)" placeholder="Tìm kiếm" />
-                                    </span>
-                                </div>
-                            </ng-template>
-                            <ng-template pTemplate="header">
-                                <tr>
-                                    <th style="width:10%">ID</th>
-                                    <th style="width:30%">Tên Kích Thước</th>
-                                    <th style="width:30%">Mô Tả</th>
-                                    <th style="width:15%">Trạng Thái</th>
-                                    <th style="width:15%"></th>
-                                </tr>
-                            </ng-template>
-                            <ng-template pTemplate="body" let-size let-editing="editing" let-ri="rowIndex">
-                                <tr [pEditableRow]="size">
-                                    <td>{{ size.Siz_ID }}</td>
-                                    <td>
-                                        <p-cellEditor>
-                                            <ng-template pTemplate="input">
-                                                <input pInputText type="text" [(ngModel)]="size.Siz_Name" />
-                                            </ng-template>
-                                            <ng-template pTemplate="output">
-                                                {{ size.Siz_Name }}
-                                            </ng-template>
-                                        </p-cellEditor>
-                                    </td>
-                                    <td>
-                                        <p-cellEditor>
-                                            <ng-template pTemplate="input">
-                                                <input pInputText type="text" [(ngModel)]="size.Siz_Desc" />
-                                            </ng-template>
-                                            <ng-template pTemplate="output">
-                                                {{ size.Siz_Desc }}
-                                            </ng-template>
-                                        </p-cellEditor>
-                                    </td>
-                                    <td>
-                                        <p-cellEditor>
-                                            <ng-template pTemplate="input">
-                                                <p-dropdown [options]="statuses" appendTo="body"
-                                                    [(ngModel)]="size.Siz_Status" />
-                                            </ng-template>
-                                            <ng-template pTemplate="output">
-                                                <p-tag [value]="size.Siz_Status ? 'Hoạt động' : 'Ngừng bán' "
-                                                    [severity]="getSeverity(size.Siz_Status)" />
-                                            </ng-template>
-                                        </p-cellEditor>
-                                    </td>
-                                    <td>
-                                        <div class="flex align-items-center justify-content-center gap-2">
-                                            <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow
-                                                icon="pi pi-pencil" (click)="onRowEditInit(size)"
-                                                class="p-button-rounded p-button-text">
-                                            </button>
-                                            <button *ngIf="!editing" pButton pRipple type="button" icon="pi pi-trash"
-                                                (click)="deleteSize(size)"
-                                                class="p-button-rounded p-button-text p-button-danger">
-                                            </button>
-                                            <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow
-                                                icon="pi pi-check" (click)="onRowEditSave(size, ri)"
-                                                class="p-button-rounded p-button-text p-button-success mr-2">
-                                            </button>
-                                            <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow
-                                                icon="pi pi-times" (click)="onRowEditCancel(size, ri)"
-                                                class="p-button-rounded p-button-text p-button-danger">
-                                            </button>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </ng-template>
-                        </p-table>
-                    </div>
+                    <p-table #dt editMode="row" [value]="sizes" dataKey="id" [paginator]="true" [rows]="10"
+                        [globalFilterFields]="['id', 'name', 'desc', 'status']" [responsiveLayout]="'scroll'">
+                        <ng-template pTemplate="caption">
+                            <div class="d-flex">
+                                <span class="p-input-icon-left ml-auto">
+                                    <i class="pi pi-search"></i>
+                                    <input pInputText type="text" style="width: 200px;" (input)="handleInput($event, dt)" placeholder="Tìm kiếm" />
+                                </span>
+                            </div>
+                        </ng-template>
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th>ID</th>
+                                <th>Tên Kích Thước</th>
+                                <th>Mô Tả</th>
+                                <th>Trạng Thái</th>
+                                <th></th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-size let-editing="editing" let-ri="rowIndex">
+                            <tr [pEditableRow]="size">
+                                <td>{{ size.id }}</td>
+                                <td>
+                                    <p-cellEditor>
+                                        <ng-template pTemplate="input">
+                                            <input pInputText type="text" [(ngModel)]="size.name" />
+                                        </ng-template>
+                                        <ng-template pTemplate="output">
+                                            {{ size.name }}
+                                        </ng-template>
+                                    </p-cellEditor>
+                                </td>
+                                <td>
+                                    <p-cellEditor>
+                                        <ng-template pTemplate="input">
+                                            <input pInputText type="text" [(ngModel)]="size.desc" />
+                                        </ng-template>
+                                        <ng-template pTemplate="output">
+                                            {{ size.desc }}
+                                        </ng-template>
+                                    </p-cellEditor>
+                                </td>
+                                <td>
+                                    <p-cellEditor>
+                                        <ng-template pTemplate="input">
+                                            <p-dropdown [options]="statuses" appendTo="body" [(ngModel)]="size.status" />
+                                        </ng-template>
+                                        <ng-template pTemplate="output">
+                                            <p-tag [value]="size.status ? 'Hoạt động' : 'Ngừng bán' " [severity]="getSeverity(size.status)" />
+                                        </ng-template>
+                                    </p-cellEditor>
+                                </td>
+                                <td>
+                                    <div class="flex align-items-center justify-content-center gap-2">
+                                        <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow
+                                            icon="pi pi-pencil" (click)="onRowEditInit(size)"
+                                            class="p-button-rounded p-button-text">
+                                        </button>
+                                        <button *ngIf="!editing" pButton pRipple type="button"
+                                            icon="pi pi-trash" (click)="deleteSize(size)"
+                                            class="p-button-rounded p-button-text p-button-danger">
+                                        </button>
+                                        <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow
+                                            icon="pi pi-check" (click)="onRowEditSave(size, ri)"
+                                            class="p-button-rounded p-button-text p-button-success mr-2">
+                                        </button>
+                                        <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow
+                                            icon="pi pi-times" (click)="onRowEditCancel(size, ri)"
+                                            class="p-button-rounded p-button-text p-button-danger">
+                                        </button>
+                                    </div>
+                                </td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
                 </div>
             </div>
         </div>
@@ -98,23 +92,23 @@
 </div>
 
 <p-dialog header="Thêm kích thước" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }" styleClass="p-fluid">
-    <form>
+    <form (ngSubmit)="createNewSize()">
         <div class="mb-4">
             <label for="name" class="form-label">Tên kích thước</label>
-            <input type="text" class="form-control" id="name" placeholder="Nhập tên" name="name">
+            <input type="text" class="form-control" id="name" placeholder="Nhập tên" name="name" [(ngModel)]="createSize.name">
         </div>
         <div class="mb-4">
             <label for="desc" class="form-label">Mô tả</label>
-            <textarea class="form-control" id="desc" placeholder="Nhập mô tả" name="desc" rows="3"></textarea>
+            <textarea class="form-control" id="desc" placeholder="Nhập mô tả" name="desc" rows="3" [(ngModel)]="createSize.desc"></textarea>
         </div>
         <div class="mb-4">
             <label class="form-check-label me-2" for="active">Trạng thái:</label>
-            <input class="form-check-input" type="radio" name="active" id="visible"> Hoạt động
-            <input class="form-check-input ms-2" type="radio" name="active" id="disable"> ngừng bán
+            <input class="form-check-input" type="radio" name="active" id="visible" [value]="true" [(ngModel)]="createSize.status"> Hoạt động
+            <input class="form-check-input ms-2" type="radio" name="active" id="disable" [value]="false" [(ngModel)]="createSize.status"> Ngừng bán
         </div>
         <div class="d-flex justify-content-end gap-2 mt-4">
             <p-button label="Hủy" severity="secondary" (onClick)="visible = false" />
-            <p-button label="Lưu" (onClick)="visible = false" />
+            <p-button label="Lưu" (onClick)="visible = false" type="submit" />
         </div>
     </form>
 </p-dialog>
