--- a/src/app/features/admin/manage-supplier/manage-supplier.component.html
+++ b/src/app/features/admin/manage-supplier/manage-supplier.component.html
@@ -9,8 +9,8 @@
                 <p-toast></p-toast>
                 <p-confirmDialog></p-confirmDialog>
                 <div class="card-body">
-                    <p-table #dt editMode="row" [value]="suppliers" dataKey="Supplier_ID" [paginator]="true" [rows]="10"
-                        [globalFilterFields]="['Supplier_ID', 'SupplierName', 'Address', 'PhoneNumber', 'Status']" [responsiveLayout]="'scroll'">
+                    <p-table #dt editMode="row" [value]="suppliers" dataKey="supplier_ID" [paginator]="true" [rows]="10"
+                        [globalFilterFields]="['supplier_ID', 'supplierName', 'address', 'phoneNumber', 'status']" [responsiveLayout]="'scroll'">
                         <ng-template pTemplate="caption">
                             <div class="d-flex">
                                 <span class="p-input-icon-left ml-auto">
@@ -31,44 +31,44 @@
                         </ng-template>
                         <ng-template pTemplate="body" let-supplier let-editing="editing" let-ri="rowIndex">
                             <tr [pEditableRow]="supplier">
-                                <td>{{ supplier.Supplier_ID }}</td>
+                                <td>{{ supplier.supplier_ID }}</td>
                                 <td>
                                     <p-cellEditor>
                                         <ng-template pTemplate="input">
-                                            <input pInputText type="text" [(ngModel)]="supplier.SupplierName" />
+                                            <input pInputText type="text" [(ngModel)]="supplier.supplierName" />
                                         </ng-template>
                                         <ng-template pTemplate="output">
-                                            {{ supplier.SupplierName }}
+                                            {{ supplier.supplierName }}
                                         </ng-template>
                                     </p-cellEditor>
                                 </td>
                                 <td>
                                     <p-cellEditor>
                                         <ng-template pTemplate="input">
-                                            <input pInputText type="text" [(ngModel)]="supplier.Address" />
+                                            <input pInputText type="text" [(ngModel)]="supplier.address" />
                                         </ng-template>
                                         <ng-template pTemplate="output">
-                                            {{ supplier.Address }}
+                                            {{ supplier.address }}
                                         </ng-template>
                                     </p-cellEditor>
                                 </td>
                                 <td>
                                     <p-cellEditor>
                                         <ng-template pTemplate="input">
-                                            <input pInputText type="text" [(ngModel)]="supplier.PhoneNumber" />
+                                            <input pInputText type="text" [(ngModel)]="supplier.phoneNumber" />
                                         </ng-template>
                                         <ng-template pTemplate="output">
-                                            {{ supplier.PhoneNumber }}
+                                            {{ supplier.phoneNumber }}
                                         </ng-template>
                                     </p-cellEditor>
                                 </td>
                                 <td>
                                     <p-cellEditor>
                                         <ng-template pTemplate="input">
-                                            <p-dropdown [options]="statuses" appendTo="body" [(ngModel)]="supplier.Status" />
+                                            <p-dropdown [options]="statuses" appendTo="body" [(ngModel)]="supplier.status" />
                                         </ng-template>
                                         <ng-template pTemplate="output">
-                                            <p-tag [value]="supplier.Status ? 'Hoạt động' : 'Ngừng bán' " [severity]="getSeverity(supplier.Status)" />
+                                            <p-tag [value]="supplier.status ? 'Hoạt động' : 'Ngừng bán' " [severity]="getSeverity(supplier.Status)" />
                                         </ng-template>
                                     </p-cellEditor>
                                 </td>
@@ -103,27 +103,27 @@
 </div>
 
 <p-dialog header="Thêm nhà cung cấp" [modal]="true" [(visible)]="visible" [style]="{ width: '30rem' }" styleClass="p-fluid">
-    <form>
+    <form (ngSubmit) = "createNewSupplier()">
         <div class="mb-4">
           <label for="name" class="form-label">Tên nhà cung cấp</label>
-          <input type="text" class="form-control" id="name" placeholder="Nhập tên" name="name">
+          <input type="text" class="form-control" id="name" [(ngModel)]="createSupplier.supplierName" placeholder="Nhập tên" name="name">
         </div>
         <div class="mb-4">
           <label for="address" class="form-label">Địa chỉ</label>
-          <textarea class="form-control" id="address" placeholder="Nhập mô tả" name="address" rows="3"></textarea>
+          <textarea class="form-control" id="address" [(ngModel)]="createSupplier.address" placeholder="Nhập mô tả" name="address" rows="3"></textarea>
         </div>
         <div class="mb-4">
             <label for="phoneNumber" class="form-label">Số điện thoại</label>
-            <input type="tel" class="form-control" id="phoneNumber" placeholder="Nhập số điện thoại" name="phoneNumber">
+            <input type="text" class="form-control" id="phoneNumber" [(ngModel)]="createSupplier.phoneNumber" placeholder="Nhập số điện thoại" name="phoneNumber">
           </div>
         <div class="mb-4">
             <label class="form-check-label me-2" for="active">Trạng thái:</label>  
-            <input class="form-check-input" type="radio" name="active" id="visible"> Hoạt động
-            <input class="form-check-input ms-2" type="radio" name="active" id="disable"> Ngừng bán
+            <input class="form-check-input" type="radio" name="active" id="visible" [value]="true" [(ngModel)]="createSupplier.status"> Hoạt động
+            <input class="form-check-input ms-2" type="radio" name="active" id="disable" [value]="false" [(ngModel)]="createSupplier.status"> Ngừng bán
           </div>
           <div class="d-flex justify-content-end gap-2 mt-4">
             <p-button label="Hủy" severity="secondary" (onClick)="visible = false" />
-            <p-button label="Lưu" (onClick)="visible = false" />
+            <p-button label="Lưu" (onClick)="visible = false" type="submit" />
         </div>
       </form>
 </p-dialog>
