--- a/src/app/features/auth/sign-in/sign-in.component.css
+++ b/src/app/features/auth/sign-in/sign-in.component.css
@@ -47,6 +47,13 @@
     font-size: 14px;
 }
 
+small {
+    display: block;
+    margin-top: 4px;
+    color: #F03B13;
+    font-size: 12px;
+}
+
 /* DT */
 @media (max-width: 767px) {
     .sign-in-modal {
