--- a/src/app/features/auth/sign-in/sign-in.component.html
+++ b/src/app/features/auth/sign-in/sign-in.component.html
@@ -1,3 +1,5 @@
+<!-- Toast sẽ hiển thị ở đây trong 1s, mặc định là top-right -->
+<p-toast [life]="1000"></p-toast>
 <div class="container-fuild">
     <div class="row">
         <div class="col-12">
@@ -10,7 +12,7 @@
                         alt="">
                 </div>
                 <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-4">
-                    <form (ngSubmit)="signIn()">
+                    <form [formGroup]="loginF" (submit)="signIn()">
                         <div class="row">
                             <div class="col-6">
                                 <label for="name" class="form-label title-sign-in">Đăng nhập</label>
@@ -23,24 +25,34 @@
                         <!-- Field: Email -->
                         <div class="mb-4 mt-3">
                             <label for="email" class="form-label d-block mb-3">Email</label>
-                            <input type="email" class="form-control" id="email" name="email" [(ngModel)]="email">
+                            <input type="email" class="form-control" id="email" formControlName="email">
+                            <div *ngIf="loginF['controls']['email'].dirty && loginF['controls']['email'].errors">
+                                <small *ngIf="loginF['controls']['email'].errors['required']">Email không được bỏ trống!</small>
+                                <small *ngIf="loginF['controls']['email'].errors['email']">Email không đúng định dạng!</small>
+                            </div>
                         </div>
 
                         <!-- Field: Password -->
                         <div class="mb-4 mt-3">
                             <label for="password" class="form-label d-block mb-3">Mật khẩu</label>
                             <div class="password-container">
-                                <input class="form-control" id="password" name="password"
-                                    [type]="isPasswordVisible ? 'text' : 'password'" [(ngModel)]="password">
+                                <input class="form-control" id="password"
+                                    [type]="isPasswordVisible ? 'text' : 'password'" formControlName="password">
                                 <a (click)="togglePasswordVisibility()" class="eye-icon-password">
                                     <p>{{PasswordVisible}}</p>
                                 </a>
+                            </div>
+                            <div *ngIf="loginF['controls']['password'].dirty && loginF['controls']['password'].errors">
+                                <small *ngIf="loginF['controls']['password'].errors['required']">Mật khẩu không được bỏ trống!</small>
+                                <small *ngIf="loginF['controls']['password'].errors['minlength']">Mật khẩu phải chứa tối thiểu 8 kí tự!</small>
+                                <small *ngIf="loginF['controls']['password'].errors['maxlength']">Mật khẩu chỉ chứa tối đa 20 kí tự!</small>
+                                <small *ngIf="loginF['controls']['password'].errors['pattern']">Mật khẩu phải chứa chữ hoa, chữ thường và kí tự khác!</small>
                             </div>
                         </div>
 
                         <a class="forget-password d-block float-end" style="cursor: pointer;">Quên mật khẩu?</a>
 
-                        <button type="submit" class="btn btn-dark w-100 mt-5">Đăng Nhập</button>
+                        <button type="submit" class="btn btn-dark w-100 mt-5" [disabled]="loginF.invalid">Đăng Nhập</button>
                     </form>
                 </div>
             </div>
