--- a/src/app/features/personal_information/record/record.component.css
+++ b/src/app/features/personal_information/record/record.component.css
@@ -44,6 +44,13 @@
     background-color: #212529;
 }
 
+small {
+    display: block;
+    margin-top: 4px;
+    color: #F03B13;
+    font-size: 12px;
+}
+
 /* DT */
 @media (max-width: 767px) {
     .record-container {
